--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "fideloper/proxy": "~3.3",
         "firebase/php-jwt": "^5.0",
         "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "tymon/jwt-auth":"~1.0.0-rc.2"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
