--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "vue": "^2.5.7"
     },
     "dependencies": {
-        "socket.io-client": "^2.2.0"
+        "socket.io-client": "^2.2.0",
+        "vuetify": "^1.5.8"
     }
 }
