--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "socket.io-client": "^2.2.0",
+        "vue-router": "^3.0.2",
         "vuetify": "^1.5.8"
     }
 }
