--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "dependencies": {
         "socket.io-client": "^2.2.0",
         "vue-router": "^3.0.2",
+        "vue-simplemde": "^0.5.1",
+        "vue-sweetalert2": "^1.6.4",
         "vuetify": "^1.5.8"
     }
 }
