--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "firebase/php-jwt": "^5.0",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "tymon/jwt-auth":"~1.0.0-rc.2"
+        "pusher/pusher-php-server": "~3.0",
+        "tymon/jwt-auth": "~1.0.0-rc.2"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
