--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
         "vue": "^2.5.7"
     },
     "dependencies": {
+        "laravel-echo": "^1.5.3",
+        "pusher-js": "^4.4.0",
         "socket.io-client": "^2.2.0",
         "vue-router": "^3.0.2",
         "vue-simplemde": "^0.5.1",
