--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
         "vue": "^2.5.7"
     },
     "dependencies": {
+        "facebook-login-vuejs": "^2.1.3",
         "laravel-echo": "^1.5.3",
         "pusher-js": "^4.4.0",
         "socket.io-client": "^2.2.0",
         "vee-validate": "^2.2.2",
+        "vue-places": "^1.1.0",
         "vue-router": "^3.0.2",
         "vue-simplemde": "^0.5.1",
+        "vue-spinners": "^1.0.2",
         "vue-sweetalert2": "^1.6.4",
+        "vue-truncate-filter": "^1.1.7",
         "vuetify": "^1.5.8"
     }
 }
