--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
         "vue": "^2.5.7"
     },
     "dependencies": {
+        "@ckeditor/ckeditor5-build-classic": "^12.4.0",
+        "@ckeditor/ckeditor5-vue": "^1.0.0",
         "facebook-login-vuejs": "^2.1.3",
         "laravel-echo": "^1.5.3",
+        "places.js": "^1.16.4",
         "pusher-js": "^4.4.0",
         "socket.io-client": "^2.2.0",
         "vee-validate": "^2.2.2",
         "vue-places": "^1.1.0",
         "vue-router": "^3.0.2",
+        "vue-sequential-entrance": "^1.1.3",
         "vue-simplemde": "^0.5.1",
         "vue-spinners": "^1.0.2",
         "vue-sweetalert2": "^1.6.4",
