--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,15 @@
         "firebase/php-jwt": "^5.0",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
+        "mll-lab/laravel-graphql-playground": "^2.0",
+        "nuwave/lighthouse": "^4.9",
         "pusher/pusher-php-server": "~3.0",
         "tymon/jwt-auth": "~1.0.0-rc.2"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
+        "laravel/dusk": "^2.0",
         "mockery/mockery": "~1.0",
         "phpunit/phpunit": "~6.0",
         "symfony/thanks": "^1.0"
