--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "pusher-js": "^4.4.0",
         "socket.io-client": "^2.2.0",
         "vee-validate": "^2.2.2",
+        "vue-flip-toolkit": "^1.6.0",
         "vue-places": "^1.1.0",
         "vue-router": "^3.0.2",
         "vue-sequential-entrance": "^1.1.3",
@@ -34,6 +35,7 @@
         "vue-spinners": "^1.0.2",
         "vue-sweetalert2": "^1.6.4",
         "vue-truncate-filter": "^1.1.7",
-        "vuetify": "^1.5.8"
+        "vuetify": "^1.5.8",
+        "vuex": "^3.1.2"
     }
 }
